--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
               <a class="nav-link" href="">Verzorging</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">Plantendokter</a>
+              <a class="nav-link" href="workshops.html">Workshops</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="workshops.html">Workshops</a>
+              <a class="nav-link" href="contact.html">Contact</a>
             </li>
           </ul>
         </div>
@@ -123,7 +123,7 @@
   <!-- The form -->
   <div class="form-popup" id="myForm">
     <form action="/action_page.php" class="form-container">
-      
+
 
 
       <p>Contact gegevens</p>
@@ -216,6 +216,7 @@
   <!-- Footer -->
   <footer class="footer mt-auto py-3">
     <div class="container-footer">
+
       <div class="row">
         <div class="col footer">
           <img class="img-fluid footerImage" src="assets/buurtCampusFooter.svg" alt="footerBuurtCampus">
