--- a/workshops.html
+++ b/workshops.html
@@ -38,10 +38,10 @@
               <a class="nav-link" href="">Verzorging</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">Plantendokter</a>
+              <a class="nav-link" href="workshops.html">Workshops</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="workshops.html">Workshops</a>
+              <a class="nav-link" href="contact.html">Contact</a>
             </li>
           </ul>
         </div>
